--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="connection_glitch">Connection glitch</string>
     <string name="retry">Retry</string>
     <string name="bookmark_button">Bookmark button</string>
+    <string name="bookmarks">Bookmarks Button</string>
 </resources>
